// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkNavigationBarBackButtonIOS should render correctly 1`] = `
<View
  accessibilityLabel="Back"
  accessibilityRole="button"
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "height": "100%",
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../packages/react-native-bpk-component-navigation-bar/src/chevron-left.png",
      }
    }
    style={
      Array [
        Array [
          Object {
            "marginEnd": 16,
          },
        ],
        Object {
          "tintColor": "rgb(68, 69, 96)",
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkNavigationBarBackButtonIOS should render correctly with title 1`] = `
<View
  accessibilityLabel="Back"
  accessibilityRole="button"
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "height": "100%",
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../packages/react-native-bpk-component-navigation-bar/src/chevron-left.png",
      }
    }
    style={
      Array [
        Array [
          Object {
            "marginEnd": 8,
          },
        ],
        Object {
          "tintColor": "rgb(68, 69, 96)",
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0.12,
        },
        Object {},
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
          },
        ],
      ]
    }
  >
    Back
  </Text>
</View>
`;
